--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,21 +1,27 @@
-// Specific CSS for your home-page
+
 .banner {
   background-size: cover;
   background-position: center;
   padding: 150px 0;
+  margin-bottom: 20px;
 }
 
-.banner h1 {
+.banner-content h1 {
   margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
+  font-size: 48px !important;
   font-weight: bold;
+  text-align: center;
 }
 
-.banner p {
+.banner-content p {
   font-size: 20px;
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-align: center;
+}
+.banner btn btn-primary btn-lg{
+  text-align: center
 }
