--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= cl_image_tag("cocktails_ss1kht", crop: :fill) %>');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= cl_image_path("cocktails_ss1kht", crop: :fill) %>')">
   <div class="banner-content">
     <h1>Andy's Cocktail Hour</h1>
     <p>Let our cocktails knock you out!</p>
